WindGroup Dev/src/objects/Stock__c.object
<CustomObject>
    <description>Created to be managed in Procurement process</description>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Stock</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cupboard__c</fullName>
        <label>Cupboard</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Latest_Stock_Freeze_Date__c</fullName>
        <label>Latest Stock Freeze Date</label>
        <summarizedField>Stock_Freeze__c.Start_Date__c</summarizedField>
        <summaryForeignKey>Stock_Freeze__c.Stock__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Stock</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stock_Freeze__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stock Freeze</label>
        <type>Checkbox</type>
    </fields>
    <label>Warehouse/Store</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Warehouse/Store</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Warehouse/Store</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>